--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "ssri": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
