--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^16.14.0",
     "react-scripts": "^4.0.3",
     "ssri": "^8.0.1"
